--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
   "keywords": ["lumen", "maintenance", "mode"],
   "license": "MIT",
   "require": {
-    "php": ">=7.2",
-    "laravel/lumen-framework": "^7.0"
+    "php": "^7.2 | ^8.0",
+    "laravel/lumen-framework": "^7.0 | ^9.0"
   },
   "authors": [
     {
@@ -31,10 +31,10 @@
     }
   ],
   "require-dev": {
-      "laravel/lumen":"~7.0",
+      "laravel/lumen":"^7.0 | ^9.0",
       "phpunit/phpunit": "^8.5",
       "fzaninotto/faker": "^1.9.1",
-      "friendsofphp/php-cs-fixer": "^2.15"
+      "friendsofphp/php-cs-fixer": "^2.15 | ^3.0"
   },
   "autoload": {
     "psr-4": {
@@ -44,7 +44,7 @@
   ,
   "autoload-dev": {
     "psr-4": {
-      "oct8pus\\MaintenanceMode\\Testing\\": "src/tests/MaintenanceMode/"
+      "oct8pus\\MaintenanceMode\\Testing\\": "tests/MaintenanceMode/"
     }
   },
   "config":{
